# FFmpegCore

./: .gitignore  CMakeLists.txt  FFmpegTest.cpp  FFmpegTest.h  MediaDataTest.cpp  MediaDataTest.h  README.md  main.cpp
code/ffmpeg/: avio_reading.cpp  decode_audio.cpp  decode_video.cpp  demuxing_decoding.cpp  encode_audio.cpp  encode_video.cpp  muxing.cpp  remuxing.cpp  transcode.cpp  transcode_aac.cpp
res/simplest_mediadata_test/output/: borderYuv.yuv  cutSingleChannelPcm16LE.pcm  doubleSpeedPcm16LE.pcm  encodeAudio.mp2  encodeVideo.h264  grayYuv.yuv  halfVolumeLPcm16LE.pcm  halfYuv.yuv  rgb2Yuv420p.yuv  splitRGB24B.yuv  splitRGB24G.yuv  splitRGB24R.yuv
res/simplest_mediadata_test/output/decodeVideo/: picture_100.yuv  picture_101.yuv  picture_102.yuv  picture_103.yuv  picture_104.yuv  picture_105.yuv  picture_106.yuv  picture_107.yuv  picture_108.yuv  picture_109.yuv  picture_110.yuv
src/: YUVUtil.cpp  YUVUtil.h
src/ffmpeg_example/: AVIOReading.cpp  AVIOReading.h  DecodeAudio.cpp  DecodeAudio.h  DecodeVideo.cpp  DecodeVideo.h  DemuxingDecoding.cpp  DemuxingDecoding.h  EncodeAudio.cpp  EncodeAudio.h  EncodeVideo.cpp  EncodeVideo.h  FFmpegTest.cpp  FFmpegTest.h  MetaData.cpp  MetaData.h  Muxing.cpp  Muxing.h
src/ffmpeg_exercise/: FFmpegDexmuxDecodeExercise.cpp  FFmpegDexmuxDecodeExercise.h  FFmpegExercise.cpp  FFmpegExercise.h  FFmpegExerciseTest.cpp  FFmpegExerciseTest.h  FFmpegExerciseTset.cpp  FFmpegExerciseTset.h
src/media_data/: AACUtil.cpp  AACUtil.h  FLVUtil.cpp  FLVUtil.h  H264Util.cpp  H264Util.h  MediaDataTest.cpp  MediaDataTest.h  PcmUtil.cpp  PcmUtil.h  YUVUtil.cpp  YUVUtil.h
src/utils/: CodecUtil.cpp  CodecUtil.h  FFmpegUtil.cpp  FFmpegUtil.h  FileUtil.cpp  FileUtil.h  ValidUtil.cpp  ValidUtil.h
